fix: fix heading overflow

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -63,6 +63,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 28px; /* 140% */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 500px;
 
     &Long {
       white-space: nowrap;
